--- a/components/_components.contact-block.scss
+++ b/components/_components.contact-block.scss
@@ -15,6 +15,7 @@ $ico-margin: 0.9em;
         color: $white;
         line-height: 1.6;
         text-align: center;
+        margin-bottom: 0.8em;
     }
     a {
         color: $white;
