--- a/components/_components.degree-requirements.scss
+++ b/components/_components.degree-requirements.scss
@@ -14,7 +14,6 @@
         }
         p {
             font-size: 0.9em;
-
         }
         .greenify {
             color: $green-victoria;
@@ -23,14 +22,19 @@
         .req-child {
             padding: 0.8em;
             background-color: $grey-alto;
+            h5 {
+                padding-top: 0.5em;
+            }
             .grand-child {
                 border-left: 6px solid $grey-silver;
                 background-color: $grey-gallery;
                 padding: 0.3em 0.5em;
                 margin-top: 0.3em;
+                p {margin-top: 0.3em;}
                 .great-grand-child {
-                    padding: 0.3em 0.5em;
+                    padding: 0.3em 0.9em;
                     background-color: $grey-alto;
+                    p {font-size: 0.8em;}
                     // border-left: 3px solid $grey-silver;
                 }
             }
