--- a/components/_components.quote-block.scss
+++ b/components/_components.quote-block.scss
@@ -5,6 +5,7 @@
 $bg-color: $grey-gallery;
 .quote-block {
     background-color: $bg-color;
+
     header {
         @include media ($mobile-large-and-smaller) {
             float: right;
@@ -15,7 +16,7 @@ $bg-color: $grey-gallery;
 .person-block {
     padding-bottom: 2em;
     .quote-text {
-         @include media ($mobile-large-and-smaller) {
+        @include media ($mobile-large-and-smaller) {
             float: right;
         }
     }
@@ -27,8 +28,8 @@ $bg-color: $grey-gallery;
 .quote-block,
 .person-block {
     .quote-wrap {
+        @include outer-container;
         padding: 1.5em;
-        max-width: 1280px;
         margin-right: auto;
         margin-left: auto;
         .quote-image {
@@ -42,14 +43,18 @@ $bg-color: $grey-gallery;
             }
             img {
                 @include size ( 180px);
-                margin: 0 1em 1em 2.5em;
+                margin-left: auto;
+                margin-right: auto;
                 border-radius: 50%;
-                @include media ( $mobile) {
-                    @include size (120px) margin: 0 0.5em 0.5em;
+                @include media ( $mobile-large-and-smaller) {
+                    @include size (120px);
                 }
             }
         }
         .quote-body {
+            @include media ( $desktop-large) {
+                @include span-columns (10);
+            }
             header {
                 padding-bottom: 1em;
                 @include media ( $desktop-and-bigger) {
@@ -59,7 +64,6 @@ $bg-color: $grey-gallery;
             h2,
             h3,
             h4 {
-                
                 margin-bottom: 0;
             }
             .quote-text {
@@ -74,9 +78,9 @@ $bg-color: $grey-gallery;
                 padding-right: 0.5em;
                 @include media ( $desktop-and-bigger) {
                     padding-right: 0.3em;
-                }
-                &:last-child {
-                    padding-left: 0.75em;
+                    &:last-child {
+                        padding-left: 0.75em;
+                    }
                 }
             }
         }
