--- a/components/_components.tooltips.scss
+++ b/components/_components.tooltips.scss
@@ -79,30 +79,43 @@
     display: none !important;
 }
 
-.text-container {
-    transition: 0.5s ease max-height;
-    max-height: 80px;
-    overflow: hidden;
-    &.text-expanded {
-        transition: 0.5s ease max-height;
-        overflow: visible;
-        max-height: 1500px;
-    }
+.more-show-hide.ng-leave
+{
+    // max-height: 0;
+    transition: 0.3s ease all;
+    opacity: 0;
 }
 
-.text-wrap {
-    position: relative;
-    .text-overlay {
-        transition: 0.5s ease all;
-        @include position( absolute, 0 0 0 0);
-        @include size( 100% 100%);
-        @include linear-gradient( transparent 0%, transparent 80%, rgba( $white, 1) 100%);
-        &.text-expanded {
 
-            background-image: none;
-        }
-    }
-}
+
+
+
+//These arent used
+
+// .text-container {
+//     transition: 0.5s ease max-height;
+//     max-height: 80px;
+//     overflow: hidden;
+//     &.text-expanded {
+//         transition: 0.5s ease max-height;
+//         overflow: visible;
+//         max-height: 1500px;
+//     }
+// }
+
+// .text-wrap {
+//     position: relative;
+//     .text-overlay {
+//         transition: 0.5s ease all;
+//         @include position( absolute, 0 0 0 0);
+//         @include size( 100% 100%);
+//         @include linear-gradient( transparent 0%, transparent 80%, rgba( $white, 1) 100%);
+//         &.text-expanded {
+
+//             background-image: none;
+//         }
+//     }
+// }
 
 .btn-text-expand.ng-enter,
 .btn-text-expand.ng-leave {
