--- a/components/_components.video-block.scss
+++ b/components/_components.video-block.scss
@@ -58,10 +58,9 @@ $bg-color: $grey-gallery;
                 @include position( absolute, null null null 0);
                 @include size ( 100%);
                 header {
-                    padding-top: 7em;
+                    @include position(absolute, null 0 0 0);
                     width: 100%;
-                    margin-right: auto;
-                    margin-left: auto;
+                    padding-bottom: 2em;
                     h2,
                     h4 {
                         color: $white;
