--- a/settings/_settings.global.scss
+++ b/settings/_settings.global.scss
@@ -33,7 +33,7 @@ $two-btn-layout:  .5 !default;
 
 // Typography
 $base-font-size:    em( $em-base, $em-browser-default ) !default;
-$base-font-colour:  $green-mako !default;
+$base-font-colour:  $black-tundora !default;
 $base-line-height:  1.6 !default;
 $base-font-family:  'Helvetica Neue', 'Segoe WP', 'Nimbus Sans L', 'Helvetica', 'Arial' !default;
 $base-spacing:      $base-line-height * 1em !default;
@@ -47,7 +47,7 @@ $base-bg-colour:    $white;
 // Borders & Lines
 $base-border-radius:    2px !default;
 $base-border-width:     1px !default;
-$base-border-colour:    $grey-mercury !default;
+$base-border-colour:    $grey-gallery !default;
 
 $base-border:   $base-border-width solid $grey-dusty-gray !default;
 
@@ -71,10 +71,10 @@ $caption-line-height:   1.35;
 $link-colour:           $blue-endeavoura;
 
 // Layout & Grid
-$block-highlight-colour: $grey-mercury;
+$block-highlight-colour: $grey-gallery;
 $block-highlight-border: $grey-alto;
 
 // Borders & Lines
-$delim-border-colour:   $grey-mercury;
+$delim-border-colour:   $grey-gallery;
 $delim-border:          $base-border-width solid $delim-border-colour;
 $darker-border-colour:  $grey-silver;
