--- a/objects/_objects.typography.scss
+++ b/objects/_objects.typography.scss
@@ -45,3 +45,8 @@
         font-size: 1.2em;
     }
 }
+
+.tooltip-inline {
+    color: $base-font-colour;
+    border-bottom: 1px dashed $blue-endeavoura;
+}
