--- a/components/_components.lists.scss
+++ b/components/_components.lists.scss
@@ -3,43 +3,34 @@
 ====================================*/
 
 
-
 /* ===== TOPICS & PROGRAMMES ================================================ */
 
-$grid-area-margin:              .15em !default;
-
-$grid-area-title-colour:        $green-mako !default;
-$grid-area-title-caret-colour:  #AAA !default;
-$grid-area-title-height:        3.3em !default;
-$grid-area-hover-title-colour:  $white !default;
-
-$grid-area-bg:                  $grey-mercury !default;
-$grid-area-hover-bg:            $grey-alto !default;
-$grid-area-active-bg:           $green-victoria !default;
-
-
+$grid-area-margin: .15em !default;
+$grid-area-title-colour: $green-mako !default;
+$grid-area-title-caret-colour: #AAA !default;
+$grid-area-title-height: 3.3em !default;
+$grid-area-hover-title-colour: $white !default;
+$grid-area-bg: $grey-mercury !default;
+$grid-area-hover-bg: $grey-alto !default;
+$grid-area-active-bg: $green-victoria !default;
 // Standard grid list containing areas and their previews
 .area {
     padding: $grid-area-margin;
-
     .title {
         display: table;
         margin: 0;
-        @include size( 100% $grid-area-title-height );
+        @include size( 100% $grid-area-title-height);
         font-weight: $weight-light;
         line-height: 1.3;
         text-align: center;
         color: $grid-area-title-colour;
-
         .ico {
             margin-left: .7em;
-
             &.caret:before {
                 // position: relative; top: -$grid-area-margin;
                 // border-top-color: $grid-area-title-caret-colour;
             }
         }
-
         > a {
             display: table-cell;
             padding: .5em 1em;
@@ -48,54 +39,55 @@ $grid-area-active-bg:           $green-victoria !default;
             font-size: 75%;
             background-color: $grid-area-bg;
             text-decoration: none;
-
             @include hoverify() {
                 background-color: $grid-area-hover-bg;
                 color: $link-colour;
-
                 // .ico.caret:before { border-top-color: $link-colour; }
             }
         }
     }
-
     .preview {
         display: none; // Hide preview by default
-        position: absolute; left: 0;
+        position: absolute;
+        left: 0;
         margin: $grid-area-margin;
         background: $grid-area-bg;
-
-        > .block:last-child { padding-top: $base-padding / 3; }
+        > .block:last-child {
+            padding-top: $base-padding / 3;
+        }
     }
-
     // Active area showing 'preview'
     .expanded & {
-
         .title {
-            position: relative; top: .1em;
+            position: relative;
+            top: .1em;
             color: $grid-area-hover-title-colour;
-
             // Flick the caret!
-            .ico { margin-left: .4em;}
+            .ico {
+                margin-left: .4em;
+            }
             .ico.caret:before {
                 margin-bottom: -0.3em;
-                @include triangle(
-                    $ico-caret-width $ico-caret-height,
-                    $white,
-                    down
-                );
+                @include triangle( $ico-caret-width $ico-caret-height, $white, down);
             }
-
             > a {
                 background-color: $grid-area-active-bg;
-
                 @include hoverify() {
                     color: inherit;
                 }
             }
         }
-
         // Show preview!
-        .preview { display: block; }
+        .preview {
+            display: block;
+        }
     }
 }
 
+.content-simple {
+    ul.ext-links {
+        @include media( $desktop-and-bigger) {
+            margin-top: 2.2em;
+        }
+    }
+}
