--- a/components/_components.facts-block.scss
+++ b/components/_components.facts-block.scss
@@ -33,7 +33,7 @@
                 // color: #115737;
                 // font-size: 0.8em;
                 margin: -0.2em;
-                padding: 0.2em;
+                padding: 0 0.2em;
                 border: 1px solid $blue-endeavoura;
                 border-radius: 2px;
                 @include hoverify (){
