--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -57,7 +57,7 @@ $grey-stack:             #808080;
 $grey-mako:              #475153;
 $grey-mine-shaft:        #333; 
 
-// ORINGINAL BLACK
+// ORINGINAL BLACK FOR TEXT
 $black-tundora: #444444;
 
 
