--- a/trumps/_trumps.site-header.scss
+++ b/trumps/_trumps.site-header.scss
@@ -19,7 +19,7 @@ $menu-break: new-breakpoint( min-width $tablet-min-width max-width 1200px $table
         color: $white;
     }
     .vic-logo {
-        background-image: url('/assets/shared/img/logo-victoria-white@x2.png');
+        background-image: url($path-shared + '/img/logo-victoria-white@x2.png');
         text-indent: -666em;
         background-color: transparent;
         background-repeat: no-repeat;
@@ -33,7 +33,7 @@ $menu-break: new-breakpoint( min-width $tablet-min-width max-width 1200px $table
         }
         @include media ($desktop-and-bigger) {
             margin-left: 1em;
-            background-image: url('/assets/shared/img/logo_desktop-2x.png');
+            background-image: url($path-shared +'/img/logo_desktop-2x.png');
             height: 88px;
             width: 22.5%;
             margin: 0 0 0 .5%;
@@ -162,6 +162,7 @@ $menu-break: new-breakpoint( min-width $tablet-min-width max-width 1200px $table
         @include media ($desktop-and-bigger) {
             display: block !important;
             ul {
+                padding-top: 1.3em;
                 li {
                     float: left;
                     padding-right: 1em;
